istio-advanced-rules/istio-networking-split/virtual-service-recommendation-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation # OpenShift service, FQDN: recommendation.<namespace>.svc.cluster.local
  http:
  - route:
#    - destination:
#        host: recommendation # OpenShift service, FQDN: recommendation.<namespace>.svc.cluster.local
#        port:
#          number: 8080
#        subset: version-v1 # subset defined in destination rule
#      weight: 0 # split traffic
    - destination:
        host: recommendation # OpenShift service, FQDN: recommendation.<namespace>.svc.cluster.local
        port:
          number: 8080
        subset: version-v2 # subset defined in destination rule
      weight: 100 # split traffic
